@@ -1,6 +1,8 @@
 version 0.9.6 (yet unreleased)
 ------------------------------
 
+Pablo Neira Ayuso <pablo@netfilter.org>:
+
 o fix compilation problem due to missing headers (Krisztian Kovacs)
 o include kernel options and Fedora comments in the INSTALL file
 o remove -lpthread during compilation
@@ -38,7 +40,11 @@ o rename class `buffer' to `queue' which is what it really implements
 o fix logfiles permissions, do not default to umask
 o wake up the daemon iff there are real events to handle instead of polling
 o add support for tagged vlan interfaces in the config file, e.g. eth0.1
-o improve alarm framework based on suggestions from Max Duempel
+o improve alarm framework based on suggestions from Max Kellerman
+
+Max Kellermann <max@duempel.org>:
+= conntrackd =
+o resolve global variable "alarm" conflict with alarm() function in unistd.h.
 
 version 0.9.5 (2007/07/29)
 ------------------------------
